# ECSEngine

./: .gitignore  CMakeLists.txt  core.h  cube_system.cpp  physics_system.cpp  render_system.cpp  system.h  user.cpp
components/: cube_component.h  rigid_body.h  transform_matrix_component.cpp  transform_matrix_component.h
default_components/: collision_box_component.h  mesh_component.h  rigid_body_component.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
default_systems/: mesh_render_system.cpp  mesh_render_system.h  physics_system.cpp  physics_system.h  render_system.cpp  sprite_render_system.cpp  sprite_render_system.h
ecs/: component.h  component_manager.cpp  component_manager.h  component_manager.tpp  core.cpp  core.tpp  entity.h  entity_manager.cpp  entity_manager.h  packed_array.cpp  packed_array.h  packed_array.tpp  paged_array.h  system.h  system_manager.cpp  system_manager.h  system_manager.tpp
